--- a/templates/login.html
+++ b/templates/login.html
@@ -30,7 +30,7 @@
                     <h3 class="panel-title">Please Sign In</h3>
                 </div>
                 <div class="panel-body">
-                    <form role="form" action="./login" method="post">
+                    <form role="form" action="/login" method="post">
                         <fieldset>
                             <div class="form-group">
                                 <input class="form-control" placeholder="E-mail" name="email" type="email" autofocus>
@@ -59,7 +59,6 @@
     </div>
 </div>
 {% endblock %}
-    </div>
     {% block js %}
     <script src="{{ url_for('serveStaticResource', resource='js/jquery.min.js')}}"></script>
     <script src="{{ url_for('serveStaticResource', resource='js/bootstrap.min.js')}}"></script>
